@@ -1,5 +1,15 @@
 2009-10-08  Ethan A Merritt  <merritt@u.washington.edu>
 
+	* src/graphics.c (plot_image_or_update_axes) demo/imageNaN.dem: 
+	NaN/Inf values in the input are processed differently depending on
+	whether they are read directly from the input file or generated by an 
+	input expression.  Both cases should be treated equivalently for the
+	purpose of IMAGE rendering.  
+	NB: Fixes 2D case but not 3D case, as shown by revised imageNaN demo.
+	Bug #2875069
+
+2009-10-08  Ethan A Merritt  <merritt@u.washington.edu>
+
 	* FAQ.pdf Makefile.am: FAQ.pdf replaces outdated FAQ
 
 	* src/graph3d.c (do_3dplot): Explicit 'set xyplane at <z-value>' should
